@@ -10,6 +10,7 @@ Changes in libmpg123 libtool interface versions...
 	- officially declared mpg123_exit() as superfluous
 	- added MPG123_ENC_DELAY, MPG123_ENC_PADDING, MPG123_DEC_DELAY
 	- added MPG123_STORE_RAW_ID3 and mpg123_id3_raw()
+	- added mpg123_new_string() and mpg123_delete_string()
 
 44.0.44
 	- added mpg123_getformat2()
